# PSTrace

./: .gitmodules  CMakeLists.txt  README.md
install/: CMakeLists.txt
install/gac/: CMakeLists.txt
install/gac/src/: GACInstaller.cs
install/wix/: patch.xml
minhook/: CMakeLists.txt
pstrace/: CMakeLists.txt
pstrace/key/: pstrace.snk
pstrace/src/: MinHook.cs  PSTrace.cs  Pipeline.cs  ScriptBlock.cs
